2015-05-20  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/pthread-pids.h: New file.
	* sysdeps/nacl/createthread.c: Include <pthread-pids.h>.
	(create_thread): Use __nacl_get_tid to initialize PD->tid.

	* nptl/pthread-pids.h: New file.
	* sysdeps/unix/sysv/linux/pthread-pids.h: New file.
	* nptl/nptl-init.c: Include <pthread-pids.h>.
	(__pthread_initialize_minimal_internal):
	Call __pthread_initialize_pids instead of set_tid_address syscall.

	* sysdeps/unix/sysv/linux/usleep.c: Moved to ...
	* sysdeps/posix/usleep.c: ... here.

2015-05-20  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/i386/Makefile [$(subdir) = misc)]: Remove
	call_pselect6 object.
	[$(subdir) = io]: Remove call_sync_file_range object.
	* sysdeps/unix/sysv/linux/i386/call_pselect6.S: Remove file.
	* sysdeps/unix/sysv/linux/i386/call_sync_file_range.S: Remove file.
	* sysdeps/unix/sysv/linux/i386/pselect.c: Remove file.
	* sysdeps/unix/sysv/linux/i386/sync_file_range.c: Remove file.

2015-05-20  Wilco Dijkstra  <wdijkstr@arm.com>

	* math/s_cproj.c: Add include "math_private.h".
	* math/s_cprojf.c: Likewise.
	* math/s_cprojl.c: Likewise.

2015-05-19  Joseph Myers  <joseph@codesourcery.com>

	[BZ #18244]
	* sysdeps/ieee754/ldbl-96/s_remquol.c (__remquol): Ignore explicit
	high mantissa bit when testing whether P is a NaN.
	* math/libm-test.inc (remainder_test_data): Add more tests.
	(remquo_test_data): Likewise.

	[BZ #18049]
	* sysdeps/i386/fpu/e_atanhl.S (__ieee754_atanhl): For exponents
	below -32, return the argument, with underflow if subnormal.
	* math/auto-libm-test-in: Add more tests of atanh.
	* math/auto-libm-test-out: Regenerated.

2015-05-19  Roland McGrath  <roland@hack.frob.com>

	[BZ #18434]
	* nptl/tst-sem15.c: New file.
	* nptl/Makefile (tests): Add it.
	* nptl/sem_post.c (__new_sem_post) [!__HAVE_64B_ATOMICS]:
	s/<</>>/ to fix typo in EOVERFLOW check.
	* sysdeps/sparc/sparc32/sem_post.c (__new_sem_post): Likewise.
